Added figures and knitr option to keep figures

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,6 +4,8 @@ author: "Terry Wang"
 date: "8/11/2017"
 output:
   html_document: 
+    fig.keep: all
+    fig_caption: yes
     keep_md: yes
   pdf_document: default
 ---
